fixed style of gallery overlap and header

--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,9 @@ h1 {
 	color: #000;
 	font-weight: 400;
 	text-align: center;
-	padding: 20px;
-	padding-top: 75px;
+	padding: 75px 20px 30px;
+	margin: 0;
+	height: 20%;
 }
 
 h2 {
@@ -55,7 +56,7 @@ header {
 	width: 100%;
 	text-align: right;
 	padding: 20px;
-	z-index: 1;
+	z-index: 10;
 	font-size: 14px;
 }
 	#navBar {
@@ -781,13 +782,13 @@ footer {
 
 
 #gallery {
-	height: 75%;
+	height: 85%;
 }
 	/* SCROLLER */
 	#viewport {
 		position: relative;
 		width: 100%;
-		height: 100%;
+		height: 80%;
 		margin: 0 auto;
 		background: #444;
 		overflow: hidden;
@@ -801,7 +802,7 @@ footer {
 
 	#scroller {
 		position: absolute;
-		z-index: 1;
+		z-index: 3;
 		-webkit-tap-highlight-color: rgba(0,0,0,0);
 		width: 4100%;
 		height: 100%;
@@ -843,7 +844,7 @@ footer {
 	height: 100%;
 	width: 5%;
 	background: #444;
-	z-index: 1000000;
+	z-index: 4;
 	position: relative;
 	cursor: pointer;
 }
